<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@android:color/darker_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/forecast_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/weather_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/weather_condition"
            app:layout_constraintEnd_toEndOf="@+id/forecast_time_text"
            app:layout_constraintStart_toStartOf="@+id/forecast_time_text"
            app:layout_constraintTop_toBottomOf="@+id/forecast_time_text" />

        <TextView
            android:id="@+id/comfortable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/weather_comfortable"
            app:layout_constraintEnd_toEndOf="@+id/condition_text"
            app:layout_constraintStart_toStartOf="@+id/condition_text"
            app:layout_constraintTop_toBottomOf="@+id/condition_text" />

        <TextView
            android:id="@+id/rain_opportunity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/weather_opportunity"
            app:layout_constraintEnd_toStartOf="@+id/min_temporary_text"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comfortable_text" />

        <TextView
            android:id="@+id/min_temporary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/weather_min_temporary"
            app:layout_constraintEnd_toStartOf="@+id/max_temporary_text"
            app:layout_constraintStart_toEndOf="@+id/rain_opportunity_text"
            app:layout_constraintTop_toBottomOf="@+id/comfortable_text" />

        <TextView
            android:id="@+id/max_temporary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/weather_max_temporary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/min_temporary_text"
            app:layout_constraintTop_toBottomOf="@+id/comfortable_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>